getNodeStyleClasses: process first apart the isolated cases
For the sake of readability

Signed-off-by: Florian Dupuy <florian.dupuy@rte-france.com>